--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actualización Viajes Chile</title>
-    
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="shortcut icon" href="./assets/img/viajes.svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
+    <script src="https://kit.fontawesome.com/f582e69a5a.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
     
 </body>
